--- a/Moluscos/CSS/paginaJogo.css
+++ b/Moluscos/CSS/paginaJogo.css
@@ -33,7 +33,7 @@ header {
     height: 80px;
     width: 100%;
     background-color: #0027A4;
-    padding: 0 20px;
+    padding: 20px;
 }
 
 .voltar {
